Add .ini to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -170,6 +170,9 @@ cython_debug/
 
 ### JAVASCRIPT ###
 
+# config
+*.ini
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
